link met foto naar spel gemaakt, alleen fotos nog niet toegevoegd

--- a/Website/index.html
+++ b/Website/index.html
@@ -8,8 +8,7 @@
         <div class="main">
             <div class="navigation">
                 <nav class="menubalk">
-                    <div id="title">管欣怡</div>
-                    <ul> <!-- Zorgt ervoor dat je naar andere pagina's gaat-->
+                    <ul> 
                         <li><a href="index.html" target="_self">home</a></li>
                         <li><a href="spel1.html" target="_self">boter, kaas en eieren</a></li>
                         <li><a href="spel2.html" target="_self">tetris</a></li>
@@ -21,6 +20,25 @@
                     <h1 class="name">Oceaan vol spellen</h1>
                 </div>
             </div>
+            <a href="spel1.html" target="_self"><img src="FOTO VAN SPEL 1" alt="foto van het spel boter, kaas en eieren" id="spel1"></a>
+<div id="titel-spel1">
+    <h1>BOTER, KAAS EN EIEREN</h1>
+</div>
+
+<a href="spel2.html" target="_self"><img src="FOTO VAN SPEL 2" alt="foto van het spel snake" id="spel2" ></a>
+<div id="titel-spel2">
+    <h2 >SNAKE</h2>
+</div>
+
+<a href="spel3.html" target="_self"><img src="FOTO VAN SPEL 3" alt="foto van het spel tetris" id="spel3"></a>
+<div id="titel-spel3">
+    <h3>TETRIS</h3>
+</div>
+
+<a href="spel4.html" target="_self"><img src="FOTO VAN SPEL 4" alt="foto van het main spel" id="spel4"></a>
+<div id="titel-spel4">
+    <h3>MAIN SPEL</h3>
+</div>
         </div>
 
     </body>
