--- a/Website/index.html
+++ b/Website/index.html
@@ -17,7 +17,7 @@
                     </ul>
                 </nav>
                 <div class="icon">
-                    <h1 class="name">Oceaan vol spellen</h1>
+                    <h1 id="name">Oceaan vol spellen</h1>
                 </div>
             </div>
             <a href="spel1.html" target="_self"><img src="FOTO VAN SPEL 1" alt="foto van het spel boter, kaas en eieren" id="spel1"></a>
