--- a/Website/index.html
+++ b/Website/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Oceaan vol spellen</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Game ocean</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -13,20 +16,20 @@
                     </ul>
                 </nav>
                 <div class="icon">
-                    <h1 id="name">Oceaan vol spellen</h1>
+                    <h1 id="name">Game ocean</h1>
                 </div>
             </div>
-            <a href="spel1.html" target="_self"><img src="FOTO VAN SPEL 1" alt="foto van het spel boter, kaas en eieren" id="spel1"></a>
+            <a href="spel1.html" target="_self"><img src="Typical_Tetris_Game.svg" alt="foto van het spel boter, kaas en eieren" id="spel1"></a>
 <div id="titel-spel1">
     <h1>BOTER, KAAS EN EIEREN</h1>
 </div>
 
-<a href="spel2.html" target="_self"><img src="FOTO VAN SPEL 2" alt="foto van het spel snake" id="spel2" ></a>
+<a href="spel2.html" target="_self"><img src="2x1_Snakeio.jpg" alt="foto van het spel snake" id="spel2" ></a>
 <div id="titel-spel2">
     <h2 >SNAKE</h2>
 </div>
 
-<a href="spel3.html" target="_self"><img src="FOTO VAN SPEL 3" alt="foto van het spel tetris" id="spel3"></a>
+<a href="spel3.html" target="_self"><img src="images.jpg" alt="foto van het spel tetris" id="spel3"></a>
 <div id="titel-spel3">
     <h3>TETRIS</h3>
 </div>
