hoofdletter bij ocean toegevoegd

--- a/Website/index.html
+++ b/Website/index.html
@@ -16,7 +16,7 @@
                     </ul>
                 </nav>
                 <div class="icon">
-                    <h1>Game ocean</h1>
+                    <h1>Game Ocean</h1>
                 </div>
             </div>
             <a href="spel1.html" target="_self"><img src="Typical_Tetris_Game.svg" alt="foto van het spel boter, kaas en eieren" id="spel1"></a>
