section toegevoegd en mainspel boven de andere spellen gezet

--- a/Website/index.html
+++ b/Website/index.html
@@ -19,6 +19,13 @@
                     <h1>Game Ocean</h1>
                 </div>
             </div>
+ <section>
+     <a href="spel4.html" target="_self"><img src="FOTO VAN SPEL 4" alt="foto van het main spel" id="spel4"></a>
+     <div id="titel-spel4">
+     <h3>MAIN SPEL</h3>
+    </div>
+ </section>
+            <section>
             <a href="spel1.html" target="_self"><img src="Typical_Tetris_Game.svg" alt="foto van het spel boter, kaas en eieren" id="spel1"></a>
 <div id="titel-spel1">
     <h1>BOTER, KAAS EN EIEREN</h1>
@@ -33,11 +40,7 @@
 <div id="titel-spel3">
     <h3>TETRIS</h3>
 </div>
-
-<a href="spel4.html" target="_self"><img src="FOTO VAN SPEL 4" alt="foto van het main spel" id="spel4"></a>
-<div id="titel-spel4">
-    <h3>MAIN SPEL</h3>
-</div>
+</section>
         </div>
 
     </body>
