afbeeldingen op een rij gezet

--- a/Website/index.html
+++ b/Website/index.html
@@ -17,10 +17,10 @@
      <h3>MAIN SPEL</h3>
     </div>
  </section>
-            <section>
+            <section class="basic-games">
             <a href="spel1.html" target="_self"><img src="Typical_Tetris_Game.svg" alt="foto van het spel boter, kaas en eieren" id="spel1"></a>
 <div id="titel-spel1">
-    <h1>BOTER, KAAS EN EIEREN</h1>
+    <h1>TETRIS</h1>
 </div>
 
 <a href="spel2.html" target="_self"><img src="2x1_Snakeio.jpg" alt="foto van het spel snake" id="spel2" ></a>
@@ -30,7 +30,7 @@
 
 <a href="spel3.html" target="_self"><img src="images.jpg" alt="foto van het spel tetris" id="spel3"></a>
 <div id="titel-spel3">
-    <h3>TETRIS</h3>
+    <h3>BOTER, KAAS & EIEREN</h3>
 </div>
 </section>
         </div>
