--- a/Website/index.html
+++ b/Website/index.html
@@ -17,22 +17,29 @@
      <h3>MAIN SPEL</h3>
     </div>
  </section>
-            <section class="basic-games">
-            <a href="spel1.html" target="_self"><img src="Typical_Tetris_Game.svg" alt="foto van het spel boter, kaas en eieren" id="spel1"></a>
-<div id="titel-spel1">
-    <h1>TETRIS</h1>
-</div>
-
-<a href="spel2.html" target="_self"><img src="2x1_Snakeio.jpg" alt="foto van het spel snake" id="spel2" ></a>
-<div id="titel-spel2">
-    <h2 >SNAKE</h2>
-</div>
-
-<a href="spel3.html" target="_self"><img src="images.jpg" alt="foto van het spel tetris" id="spel3"></a>
-<div id="titel-spel3">
-    <h3>BOTER, KAAS & EIEREN</h3>
-</div>
-</section>
+ <section class="basic-games">
+    <div class="game">
+      <a href="spel1.html" target="_self">
+        <img src="Schermafbeelding 2025-10-05 om 15.08.07.png" alt="foto van het spel tetris">
+        <div class="titel-spel">TETRIS</div>
+      </a>
+    </div>
+  
+    <div class="game">
+      <a href="spel2.html" target="_self">
+        <img src="2x1_Snakeio.jpg" alt="foto van het spel snake">
+        <div class="titel-spel">SNAKE</div>
+      </a>
+    </div>
+  
+    <div class="game">
+      <a href="spel3.html" target="_self">
+        <img src="images.jpg" alt="foto van het spel boter, kaas en eieren">
+        <div class="titel-spel">BOTER, KAAS & EIEREN</div>
+      </a>
+    </div>
+  </section>
+  
         </div>
 
     </body>
