boter kaas en eieren foto veranderd naar het juiste en schaduw toegevoegd

--- a/Website/index.html
+++ b/Website/index.html
@@ -34,7 +34,7 @@
   
     <div class="game">
       <a href="spel3.html" target="_self">
-        <img src="images.jpg" alt="foto van het spel boter, kaas en eieren">
+        <img src="afbeelding.png" alt="foto van het spel boter, kaas en eieren">
         <div class="titel-spel">BOTER, KAAS & EIEREN</div>
       </a>
     </div>
