--- a/Website/spel1.html
+++ b/Website/spel1.html
@@ -14,7 +14,7 @@
         <div class="navigation">
             <nav class="menubalk">
                 <ul> 
-                    <li><a href="index.html" target="_self">home</a></li>
+                    <li><a href="index.html" target="_self">HOME</a></li>
                 </ul>
             </nav>
             
