--- a/Website/spel3.html
+++ b/Website/spel3.html
@@ -14,6 +14,6 @@
         <div class="navigation">
             <nav class="menubalk">
                 <ul> 
-                    <li><a href="index.html" target="_self">home</a></li>
+                    <li><a href="index.html" target="_self">HOME</a></li>
                 </ul>
             </nav>
