--- a/Website/index.html
+++ b/Website/index.html
@@ -8,9 +8,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <section id="hoofdsectie">
         <div class="icon">
             <h1>Game Ocean</h1>
         </div>
+    </section>
  <section>
      <a href="spel4.html" target="_self"><img src="FOTO VAN SPEL 4" alt="foto van het main spel" id="spel4"></a>
      <div id="titel-spel4">
