fotos van spellen toegevoegd

--- a/Website/index.html
+++ b/Website/index.html
@@ -22,14 +22,14 @@
  <section class="basic-games">
     <div class="game">
       <a href="spel1.html" target="_self">
-        <img src="Schermafbeelding 2025-10-05 om 15.08.07.png" alt="foto van het spel tetris">
+        <img src="image.png" alt="foto van het spel tetris">
         <div class="titel-spel">TETRIS</div>
       </a>
     </div>
   
     <div class="game">
       <a href="spel2.html" target="_self">
-        <img src="2x1_Snakeio.jpg" alt="foto van het spel snake">
+        <img src="Schermafbeelding 2025-10-06 om 15.00.12.png" alt="foto van het spel snake">
         <div class="titel-spel">SNAKE</div>
       </a>
     </div>
