--- a/Website/index.html
+++ b/Website/index.html
@@ -22,21 +22,21 @@
  <section class="basic-games">
     <div class="game">
       <a href="spel1.html" target="_self">
-        <img src="image.png" alt="foto van het spel tetris">
+        <img src="Schermafbeelding 2025-10-06 om 15.56.09.png" alt="foto van het spel tetris">
         <div class="titel-spel">TETRIS</div>
       </a>
     </div>
   
     <div class="game">
       <a href="spel2.html" target="_self">
-        <img src="Schermafbeelding 2025-10-06 om 15.00.12.png" alt="foto van het spel snake">
+        <img src="Schermafbeelding 2025-10-06 om 15.58.00.png" alt="foto van het spel snake">
         <div class="titel-spel">SNAKE</div>
       </a>
     </div>
   
     <div class="game">
       <a href="spel3.html" target="_self">
-        <img src="afbeelding.png" alt="foto van het spel boter, kaas en eieren">
+        <img src="Schermafbeelding 2025-10-06 om 15.57.23.png" alt="foto van het spel boter, kaas en eieren">
         <div class="titel-spel">BOTER, KAAS & EIEREN</div>
       </a>
     </div>
