--- a/Website/spel1.html
+++ b/Website/spel1.html
@@ -17,4 +17,6 @@
                     <li><a href="index.html" target="_self">HOME</a></li>
                 </ul>
             </nav>
+        </div>
+        
             
