--- a/spel1.html
+++ b/spel1.html
@@ -18,5 +18,7 @@
                 </ul>
             </nav>
         </div>
-        
+        <div class="game-container">
+            <iframe src="Web Versie tetris/index.html" width="800" height="800" frameborder="0"></iframe>
+        </div>
             
