--- a/spel2.html
+++ b/spel2.html
@@ -19,5 +19,5 @@
             </nav>
         </div>
         <div class="game-container">
-            <iframe src="web versie/snake.html" width="800" height="800" frameborder="0"></iframe>
+            <iframe src="web versie snake/snake.html" width="800" height="800" frameborder="0"></iframe>
         </div>
