--- a/spel3.html
+++ b/spel3.html
@@ -17,3 +17,7 @@
                     <li><a href="index.html" target="_self">HOME</a></li>
                 </ul>
             </nav>
+        </div>
+        <div class="game-container">
+            <iframe src="web versie bke/boter kaas en eieren.html" width="800" height="800" frameborder="0"></iframe>
+        </div>
