--- a/Website/spel3.html
+++ b/Website/spel3.html
@@ -8,9 +8,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="icon">
-            <h1>Game Ocean</h1>
-        </div>
+        <section id="hoofdsectie">
+            <div class="icon">
+                <h1>Game Ocean</h1>
+            </div>
+        </section>
         <div class="navigation">
             <nav class="menubalk">
                 <ul> 
