--- a/Website/index.html
+++ b/Website/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Game ocean</title>
         <link rel="stylesheet" href="style.css">
+        <script src="main.js"></script>
     </head>
     <body>
         <section id="hoofdsectie">
@@ -13,7 +14,12 @@
             <h1>Game Ocean</h1>
         </div>
     </section>
- <section>
+    <div class="search-balk">
+      <input type="text"
+      placeholder="Search game">
+      <button>&#128269;</button>
+    </div>
+ <section> 
      <a href="spel4.html" target="_self"><img src="FOTO VAN SPEL 4" alt="foto van het main spel" id="spel4"></a>
      <div id="titel-spel4">
      <h3>MAIN SPEL</h3>
