search balk werkend gemaakt

--- a/Website/index.html
+++ b/Website/index.html
@@ -6,7 +6,6 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Game ocean</title>
         <link rel="stylesheet" href="style.css">
-        <script src="main.js"></script>
     </head>
     <body>
         <section id="hoofdsectie">
@@ -15,33 +14,33 @@
         </div>
     </section>
     <div class="search-balk">
-      <input type="text"
+      <input type="text" id="search"
       placeholder="Search game">
-      <button>&#128269;</button>
+      <button type="button">&#128269;</button>
     </div>
  <section> 
-     <a href="spel4.html" target="_self"><img src="FOTO VAN SPEL 4" alt="foto van het main spel" id="spel4"></a>
+     <a href="mainspel.html" target="_self"><img src="FOTO VAN SPEL 4" alt="foto van het main spel" id="spel4"></a>
      <div id="titel-spel4">
      <h3>MAIN SPEL</h3>
     </div>
  </section>
  <section class="basic-games">
     <div class="game">
-      <a href="spel1.html" target="_self">
+      <a href="tetris.html" target="_self">
         <img src="Schermafbeelding 2025-10-06 om 15.56.09.png" alt="foto van het spel tetris">
         <div class="titel-spel">TETRIS</div>
       </a>
     </div>
   
     <div class="game">
-      <a href="spel2.html" target="_self">
+      <a href="snake.html" target="_self">
         <img src="Schermafbeelding 2025-10-06 om 15.58.00.png" alt="foto van het spel snake">
         <div class="titel-spel">SNAKE</div>
       </a>
     </div>
   
     <div class="game">
-      <a href="spel3.html" target="_self">
+      <a href="boterkaaseieren.html" target="_self">
         <img src="Schermafbeelding 2025-10-06 om 15.57.23.png" alt="foto van het spel boter, kaas en eieren">
         <div class="titel-spel">BOTER, KAAS & EIEREN</div>
       </a>
@@ -49,7 +48,7 @@
   </section>
   
         </div>
-
+        <script src="main.js"></script>
     </body>
 
 </html>
