--- a/Website/mainspel.html
+++ b/Website/mainspel.html
@@ -6,7 +6,6 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Game ocean</title>
         <link rel="stylesheet" href="style.css">
-        <script src="main.js"></script>
     </head>
     <body>
         <section id="hoofdsectie">
@@ -20,3 +19,7 @@
                     <li><a href="index.html" target="_self">HOME</a></li>
                 </ul>
             </nav>
+        </div>
+        <script src="main.js"></script>
+    </body>
+</html>
