--- a/Website/tetris.html
+++ b/Website/tetris.html
@@ -6,8 +6,6 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Game ocean</title>
         <link rel="stylesheet" href="style.css">
-        <script src="main.js"></script>
-
     </head>
     <body>
         <section id="hoofdsectie">
@@ -21,4 +19,7 @@
                     <li><a href="index.html" target="_self">HOME</a></li>
                 </ul>
             </nav>
-            
+            <script src="main.js"></script>
+            </div>
+        </body>
+ </html>
