--- a/Website/index.html
+++ b/Website/index.html
@@ -26,27 +26,26 @@
  </section>
  <section class="basic-games">
     <div class="game">
-      <a href="tetris.html" target="_self">
-        <img src="Schermafbeelding 2025-10-06 om 15.56.09.png" alt="foto van het spel tetris">
+      <a href="tetris/tetris.html" target="_self">
+        <img src="tetris/tetrisfoto.png" alt="foto van het spel tetris">
         <div class="titel-spel">TETRIS</div>
       </a>
     </div>
   
     <div class="game">
-      <a href="snake.html" target="_self">
-        <img src="Schermafbeelding 2025-10-06 om 15.58.00.png" alt="foto van het spel snake">
+      <a href="snake/snake.html" target="_self">
+        <img src="snake/snakefoto.png" alt="foto van het spel snake">
         <div class="titel-spel">SNAKE</div>
       </a>
     </div>
   
     <div class="game">
-      <a href="boterkaaseieren.html" target="_self">
-        <img src="Schermafbeelding 2025-10-06 om 15.57.23.png" alt="foto van het spel boter, kaas en eieren">
+      <a href="boter/boterkaaseieren.html" target="_self">
+        <img src="boter/boterfoto.png" alt="foto van het spel boter, kaas en eieren">
         <div class="titel-spel">BOTER, KAAS & EIEREN</div>
       </a>
     </div>
   </section>
-  
         </div>
         <script src="main.js"></script>
     </body>
