--- a/Website/boter/boterkaaseieren.html
+++ b/Website/boter/boterkaaseieren.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Game ocean</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <section id="hoofdsectie">
@@ -16,10 +16,10 @@
         <div class="navigation">
             <nav class="menubalk">
                 <ul> 
-                    <li><a href="index.html" target="_self">HOME</a></li>
+                    <li><a href="../index.html" target="_self">HOME</a></li>
                 </ul>
             </nav>
-            <script src="main.js"></script>
-            </div>
-        </body>
- </html>
+        </div>
+        <script src="main.js"></script>
+    </body>
+</html>
