flappybird game gemaakt

--- a/Website/index.html
+++ b/Website/index.html
@@ -45,6 +45,13 @@
         <div class="titel-spel">BOTER, KAAS & EIEREN</div>
       </a>
     </div>
+
+    <div class="game">
+      <a href="flappybird/flappybird.html" target="_self">
+        <img src="flappybird/bird.png" alt="flappybird">
+        <div class="titel-spel">FlAPPYBIRD</div>
+      </a>
+    </div>
   </section>
         </div>
         <script src="main.js"></script>
