tetris in website gezet

--- a/Website/tetris/tetris.html
+++ b/Website/tetris/tetris.html
@@ -20,6 +20,10 @@
                 </ul>
             </nav>
             <script src="main.js"></script>
-            </div>
+        </div>
+
+        <div class="game-container">
+          <iframe src="Website/webversie tetris/game.html" width="500" height="620" frameborder="0"></iframe>
+        </div>
         </body>
  </html>
