tetris in website zetten v2

--- a/Website/tetris/tetris.html
+++ b/Website/tetris/tetris.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="game-container">
-          <iframe src="Website/webversie tetris/game.html" width="500" height="620" frameborder="0"></iframe>
+          <iframe src="webversie tetris/tetris.html" width="500" height="620" frameborder="0"></iframe>
         </div>
         </body>
  </html>
