--- a/Website/index.html
+++ b/Website/index.html
@@ -26,7 +26,7 @@
  </section>
  <section class="basic-games">
     <div class="game">
-      <a href="tetris/tetris.html" target="_self">
+      <a href="tetris/tetris_site.html" target="_self">
         <img src="tetris/tetrisfoto.png" alt="foto van het spel tetris">
         <div class="titel-spel">TETRIS</div>
       </a>
