hopelijk werkt tetris nu wel zoals ik wil

--- a/Website/tetris/tetris_site.html
+++ b/Website/tetris/tetris_site.html
@@ -22,7 +22,7 @@
             <script src="main.js"></script>
         </div>
 
-        <div class="game-container">
+        <div class="game-container-v2">
           <iframe src="webversie_tetris/tetris.html" width="500" height="620" frameborder="0"></iframe>
         </div>
         </body>
