fotos toegevoegd voor de spellen

--- a/Website/index.html
+++ b/Website/index.html
@@ -19,10 +19,9 @@
       <button type="button">&#128269;</button>
     </div>
  <section> 
-     <a href="mainspel.html" target="_self"><img src="FOTO VAN SPEL 4" alt="foto van het main spel" id="spel4"></a>
-     <div id="titel-spel4">
-     <h3>MAIN SPEL</h3>
-    </div>
+     <a href="mainspel.html" target="_self">
+      <img src="voorpaginamain.png" alt="foto van het main spel" id="spel4"></a>
+     <div id="titel-spel4">MAIN SPEL</div>
  </section>
  <section class="basic-games">
     <div class="game">
@@ -48,7 +47,7 @@
 
     <div class="game">
       <a href="flappybird/flappybird.html" target="_self">
-        <img src="flappybird/bird.png" alt="flappybird">
+        <img src="flappybird/voorpaginaflappy.png" alt="flappybird">
         <div class="titel-spel">FlAPPYBIRD</div>
       </a>
     </div>
