--- a/Website/snake/snake_site.html
+++ b/Website/snake/snake_site.html
@@ -21,5 +21,10 @@
             </nav>
         </div>
         <script src="main.js"></script>
+
+        <div class="game-container-v2">
+          <iframe src="webversie_tetris/tetris.html" width="500" height="620" frameborder="0"></iframe>
+        </div>
+
     </body>
 </html>
