--- a/Website/tetris/tetris_site.html
+++ b/Website/tetris/tetris_site.html
@@ -22,8 +22,11 @@
             <script src="main.js"></script>
         </div>
 
-        <div class="game-container-v2">
-          <iframe src="webversie_tetris/tetris.html" width="500" height="620" frameborder="0"></iframe>
-        </div>
+.game-container {
+  display: flex;
+  justify-content: center;  /* Horizontaal centreren */
+  align-items: center;      /* Verticaal centreren (optioneel) */
+  margin-top: 40px;         /* Ruimte tussen de bovenbalk en de game */
+}
         </body>
  </html>
