--- a/Website/tetris/tetris_site.html
+++ b/Website/tetris/tetris_site.html
@@ -22,11 +22,8 @@
             <script src="main.js"></script>
         </div>
 
-.game-container {
-  display: flex;
-  justify-content: center;  /* Horizontaal centreren */
-  align-items: center;      /* Verticaal centreren (optioneel) */
-  margin-top: 40px;         /* Ruimte tussen de bovenbalk en de game */
-}
+        <div class="game-container-v2">
+          <iframe src="webversie_tetris/tetris.html" width="500" height="620" frameborder="0"></iframe>
+        </div>
         </body>
  </html>
