--- a/Website/snake/snake_site.html
+++ b/Website/snake/snake_site.html
@@ -24,6 +24,8 @@
         </div>
         <script src="main.js"></script>
 
+<!dit heeft geen functie>
+
         <div class="game-container-v2">
           <iframe src="webversie_snake/snake.html" width="1000" height="1050" frameborder="0"></iframe>
         </div>
