--- a/Website/snake/snake_site.html
+++ b/Website/snake/snake_site.html
@@ -16,9 +16,7 @@
         <div class="navigation">
             <nav class="menubalk">
                 <ul> 
-                    <li><a href="../index.html" target="_self">HOME</a></l        <div class="game-container-v2">
-          <iframe src="webversie_tetris/tetris.html" width="500" height="620" frameborder="0"></iframe>
-        </div>i>
+                    <li><a href="../index.html" target="_self">HOME</a></li>
                 </ul>
             </nav>
         </div>
