--- a/Website/snake/snake_site.html
+++ b/Website/snake/snake_site.html
@@ -24,7 +24,7 @@
 
 <!dit heeft geen functie>
 
-        <div class="game-container-v2">
+        <div class="game-container-v2" id="snake">
           <iframe src="webversie_snake/snake.html" width="1000" height="1050" frameborder="0"></iframe>
         </div>
 
