--- a/Website/snake/snake_site.html
+++ b/Website/snake/snake_site.html
@@ -24,8 +24,14 @@
 
 <!dit heeft geen functie>
 
-        <div class="game-container-v2" id="snake">
-          <iframe src="webversie_snake/snake.html" width="1000" height="1050" frameborder="0"></iframe>
+        <div class="game-container-v2" id="snake"> 
+          <iframe 
+            src="webversie_snake/snake.html" 
+            width="1000" 
+            height="1050" 
+            frameborder="0"
+            style="transform: scale(0.3); transform-origin: top center; border: none;">
+          </iframe>>
         </div>
 
     </body>
