codes horen bij elkaar

--- a/Website/index.html
+++ b/Website/index.html
@@ -18,6 +18,8 @@
       placeholder="Search game">
       <button type="button">&#128269;</button>
     </div>
+
+    <!-- gegevens van de games -->
  <section> 
      <a href="mainspel.html" target="_self">
       <img src="voorpaginamain.png" alt="foto van het main spel" id="spel4"></a>
