commentaar voor flappy toegeovegd

--- a/Website/flappybird/flappybird.html
+++ b/Website/flappybird/flappybird.html
@@ -24,10 +24,11 @@
             <div class="game-container">
                 <div class="background"></div>
                 <img src="bird.png" alt="de vogel" class="bird" id="bird1">
+               <!-- zorgt voor het bericht aan begin (en einde) van de game-->
                 <div class="message">Enter to start the game <p><span style="color: blue;">&uarr;</span> to control</p></div>
                 <div class="score">
-                    <span class="score_title"></span>
-                    <span class="score_val"></span>
+                    <span class="score_title"></span> <!-- zorgt voor de tekst 'score'-->
+                    <span class="score_val"></span> <!-- zorgt voor het cijfer van de score-->
                 </div>
             </div>
         </section>
