--- a/Website/mainspel.html
+++ b/Website/mainspel.html
@@ -21,5 +21,8 @@
             </nav>
         </div>
         <script src="main.js"></script>
+	<div class="game-container-v2">
+          <iframe src="maingame/maingame.html" width="800" height="300" frameborder="0"></iframe>
+        </div>
     </body>
 </html>
