--- a/Website/boter/boterkaaseieren_site.html
+++ b/Website/boter/boterkaaseieren_site.html
@@ -21,5 +21,8 @@
             </nav>
         </div>
         <script src="main.js"></script>
+        <div class="game-container-v2">
+          <iframe src="webv_boter/boterkaaseiren_web.html" width="1152" height="648" frameborder="0"></iframe>
+        </div>
     </body>
 </html>
